Update build script